Add first content block to the page
I added the first block to the page which shows some information and
an image.

--- a/README.org
+++ b/README.org
@@ -10,3 +10,7 @@ layout. This is the second project of the Odin project Foundations course.
 
 - [[https://www.theodinproject.com/about][About Odin]]
 - [[https://www.theodinproject.com/lessons/foundations-landing-page][Assignment page]]
+
+** Credits
+
+- Pascvii, [[https://pixabay.com/photos/lake-maggiore-leggiuno-panorama-4081131/][photo in the heading]]
